2004-01-08  Jean-Noel Guiheneuf <jnoel@lotuscompounds.com>

* scintilla/*/*: Updated scintilla to CVS

* Added: scintilla/Readme.sync

* scintilla/Document.cxx, scintilla/Editor.cxx, scintilla/KeyWords.cxx
scintilla/LexMatlab.cxx, scintilla/LexOthers.cxx, scintilla/LexRuby.cxx
scintilla/LexVB.cxx, scintilla/ScintillaBase.cxx, scintilla/ScintillaBase.h
scintilla/ScintillaGTK.cxx
scintilla/include/SciLexer.h, scintilla/include/Scintilla.h
scintilla/include/Scintilla.iface

2004-01-07  Jean-Noel Guiheneuf <jnoel@lotuscompounds.com>

	* Added: search-replace_backend.[ch], search_incremental[ch]
	
	* Removed: find_text.[ch], find_in_files.[ch], find_in_files_cbs.[ch],
	find_replace.[ch]
	
	* anjuta.glade, src/search-replace.c, src/search-replace.h,
	src/search-replace_backend.c, src/search-replace_backend.h,
	src/mainmenu_callbacks.c, src/mainmenu_callbacks.h,
	src/anjuta.c, src/anjuta.h, src/project_dbase.c, src/project_dbase.h,
	src/toolbar_callbacks.c, src/Makefile.am
	
	* The advanced Search/Replace functionality now replaces the older
	Find/Replace stuff.
	* The Search/Replace functionality can be interrupted during a long
	Search/Replace.

2004-01-02  Dan Elphick <dre00r@ecs.soton.ac.uk>

 	* widgets/gnomefilesel.c: Fix use of previously freed memory on
 	selecting ".." and "." from file selector. 

2004-01-02  Johannes Schmid <jhs@cvs.gnome.org>

	* anjuta.glade: Fixed wrong "fold.symbols" property

2003-12-31  Johannes Schmid <jhs@cvs.gnome.org>
	
	* src/project_dbase_gui.c: Alphabetical order ;-)
	* src/compiler_options.c: Fixed bug #867539
	* src/launcher.c: Workaround for bugs #864922, #849928,
	#846386 and #845782: The launcher no longer hangs but does
	not get the exit status correctly sometimes.
	* Changes suggested by Bosik are obviously already in without
	any Changelog entry (ClsGen.c, project_dbase_gui.c)
	* NEWS, README, anjuta.prj, configure.in: 
	Changed version to 1.2.1
	
	Patch from Andreas Volz <andreas99@users.sourceforge.net>: