@@ -65,6 +65,24 @@ void
 on_toolbar_detach_clicked                (GtkButton       *button,
                                         gpointer         user_data);
 
+gboolean
+on_toolbar_find_incremental_start 		(GtkEntry 		*entry, 
+										GdkEvent *e, 
+										gpointer user_data);
+										
+gboolean
+on_toolbar_find_incremental_end 		(GtkEntry *entry,
+										GdkEvent *e, 
+										gpointer user_data);
+										
+void
+on_toolbar_find_incremental 			(GtkEntry *entry, 
+										gpointer user_data);
+										
+void
+on_toolbar_find_clicked 				(GtkButton * button, 
+										gpointer user_data);
+
 void
 on_toolbar_goto_clicked                (GtkButton       *button,
                                         gpointer         user_data);
